# Mindbox_test1

./: pyproject.toml
geometry/: shapes.py
geometry_lib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_shapes.py
